syntax = "proto3";

package api;

import "globals.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

service GroupsService {
    rpc ListGroups (ListGroupsRequest) returns (ListGroupsResponse) {
        option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            operation_id: "List groups"
            description: "Lists all groups, can be limited with paging options"
            security: {
                security_requirement: {
                    key: "TokenAuth"
                    value: {}
                }
            }
        };
        option (google.api.http) = {
            get: "/v1/groups"
        };
    };
    rpc CreateGroup (CreateGroupRequest) returns (Group) {
        option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            operation_id: "Create group"
            description: "Creates group"
            security: {
                security_requirement: {
                    key: "TokenAuth"
                    value: {}
                }
            }
        };
        option (google.api.http) = {
            post: "/v1/groups"
            body: "*"
        };
    };
    rpc GetGroup (GetGroupRequest) returns (Group) {
        option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            operation_id: "Get group"
            description: "Returns single group with given id"
            security: {
                security_requirement: {
                    key: "TokenAuth"
                    value: {}
                }
            }
        };
        option (google.api.http) = {
            get: "/v1/group/{id}"
        };
    };
    rpc UpdateGroup (Group) returns (Group) {
        option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            operation_id: "Update group"
            description: "Updates group, all fields must be send"
            security: {
                security_requirement: {
                    key: "TokenAuth"
                    value: {}
                }
            }
        };
        option (google.api.http) = {
            put: "/v1/group/{id}"
            body: "*"
        };
    };
    rpc DeleteGroup (DeleteGroupRequest) returns (google.protobuf.Empty) {
        option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            operation_id: "Delete group"
            description: "Deletes group with given id"
            security: {
                security_requirement: {
                    key: "TokenAuth"
                    value: {}
                }
            }
        };
        option (google.api.http) = {
            delete: "/v1/group/{id}"
        };
    };
}

message ListGroupsRequest {
    Paging paging = 1;
}

message CreateGroupRequest {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
        json_schema: {title:"GroupCreation"}
    };
    string name =1;
    string description = 2;
    bool can_overdraw = 3;
}

message GetGroupRequest {
    int32 id = 1;
}

message DeleteGroupRequest {
    int32 id = 1;
}

message ListGroupsResponse {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
        json_schema: {title:"Groups"}
    };
    repeated Group groups = 1;
    int32 total_count=2;
}

message Group {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
        json_schema: {title:"Group"}
    };
    int32 id = 1;
    string name = 2;
    string description = 3;
    bool can_overdraw = 4;
}